# rust-web-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 0001_create_users.sql
src/: lib.rs  main.rs  openapi.rs  routes.rs
src/domain/: user.rs
src/handlers/: hello.rs  mod.rs  user.rs
src/infra/: in_memory_user_repository.rs  mod.rs  sqlx_user_repository.rs
src/presentation/: mod.rs  user_handlers.rs
src/usecase/: user_service.rs
tests/: api.rs
