[package]
name = "rust-web-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.80"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "mysql", "macros", "migrate"] }
url = "2.5"
